--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "@google/generative-ai": "^0.17.1",
+    "@prisma/client": "^5.19.0",
+    "express": "^4.19.2",
+    "prisma": "^5.19.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
