--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
     "@prisma/client": "^5.19.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "prisma": "^5.19.0"
   },
