--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - .env
     depends_on:
       - db
+    command: >
+      sh -c "npx prisma migrate deploy"  
 
   db:
     image: postgres:14
